# bncsutil

./: CMakeLists.txt  FindGMP.cmake  README.md
src/bncsutil/: cdkeydecoder.cpp  checkrevision.cpp  debug.c  mutil.h
